Add same debug helper dump() and cli_dump() function as we use in Transvision

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,13 @@
 {
-  "autoload": {
-    "psr-0": {
-        "Play": "app/classes/",
-        "Transvision": "app/classes/",
-        "Langchecker": "app/classes/"
+    "autoload": {
+        "psr-0": {
+            "Play": "app/classes/",
+            "Transvision": "app/classes/",
+            "Langchecker": "app/classes/"
+        },
+        "files": ["app/helpers/debug.php"]
+    },
+    "require": {
+        "symfony/var-dumper": "~2.6"
     }
-  }
 }
