--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,8 @@ php:
   - 5.6
 before_script:
   ## Composer
-  - composer install
-  ## Travis configuration
-  - cp config/settings.inc.php.ini config/settings.inc.php
+  - composer self-update
+  - composer install --no-interaction --dev
 script:
   - vendor/atoum/atoum/bin/atoum -d tests/units/
   - vendor/bin/php-cs-fixer --diff --dry-run -v fix
@@ -20,3 +19,5 @@ notifications:
     template:
       - "%{repository} ; %{commit} (%{author}) : %{message} "
       - "Build details: %{build_url} ; changes: %{compare_url}"
+matrix:
+  fast_finish: true
