--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,13 @@
         "component-dir": "web/media/assets"
     },
 
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/pascalchevrel/Verif/"
+        }
+    ],
+
     "require": {
         "monolog/monolog" : "~1.1",
         "components/jquery": "~1.1",
@@ -22,6 +29,8 @@
     "require-dev": {
         "atoum/atoum" : "~1.1",
         "symfony/var-dumper": "~2.6",
-        "fabpot/php-cs-fixer": "~1.4"
+        "fabpot/php-cs-fixer": "~1.4",
+        "pchevrel/verif": "dev-master"
+
     }
 }
