--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ language: php
 php:
   - 5.5
   - 5.6
+  - 7.0
 before_script:
   ## Composer
   - composer self-update
   - composer install --no-interaction --prefer-source
 script:
   - vendor/atoum/atoum/bin/atoum -d tests/units/
+  - php tests/functional/api.php
   - vendor/bin/php-cs-fixer --diff --dry-run -v fix
 notifications:
   irc:
