APPSTORE INTEGRATION * Add locales supported by AppStore * Add Appstore release table to the home page * add Appstore template * Json api documentation * Updated functional tests * Updated unit tests

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
             "Transvision": "app/classes/",
             "Langchecker": "app/classes/"
         },
-        "files": ["app/helpers/debug.php"]
+        "files": [
+            "app/helpers/debug.php",
+            "app/helpers/utilities.php"
+        ]
     },
 
     "config": {
