:arrow_up: update Verif to 0.4

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "atoum/atoum" : "~2.0",
         "symfony/var-dumper": "~2.6",
         "fabpot/php-cs-fixer": "~1.4",
-        "pchevrel/verif": "dev-master"
+        "pchevrel/verif": "0.4"
 
     }
 }
