--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ php:
   - 5.5
   - 5.6
   - 7.0
+before_install:
+  ## Install latest version of node
+  - nvm install node
 before_script:
   ## Disabling xdebug
   - phpenv config-rm xdebug.ini
