--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,9 @@
 
     "require-dev": {
         "atoum/atoum" : "~2.0",
-        "symfony/var-dumper": "~2.6",
-        "fabpot/php-cs-fixer": "~1.4",
-        "pchevrel/verif": "0.4"
+        "friendsofphp/php-cs-fixer": "~1.11",
+        "pchevrel/verif": "0.4",
+        "symfony/var-dumper": "~2.6"
 
     }
 }
