--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "autoload": {
             "psr-0": {
             "Stores": "app/classes/",
-            "Transvision": "app/classes/",
             "Langchecker": "app/classes/"
         },
         "files": [
@@ -16,6 +15,10 @@
     },
 
     "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/mozilla-l10n/phpclass-json"
+        },
         {
             "type": "vcs",
             "url": "https://github.com/pascalchevrel/Verif/"
@@ -33,8 +36,8 @@
     "require-dev": {
         "atoum/atoum" : "~2.0",
         "friendsofphp/php-cs-fixer": "~1.11",
+        "mozillal10n/json": "~0.1",
         "pchevrel/verif": "0.4",
         "symfony/var-dumper": "~2.6"
-
     }
 }
