Fixed a few more nits found in review

--- a/app/config/config.inc.php.ini
+++ b/app/config/config.inc.php.ini
@@ -1,10 +1,10 @@
 <?php
 
 /*
-    This is is used to include assets in templates. Change this setting
-    according to your system: if langchecker is served from the root,
-    use '/', otherwise put the URL of the folder containing
-    the Stores Web App, e.g. '/stores_l10n/'
+    This is is used to include assets in templates and parse API requests.
+    Change this setting according to your system: if the web app is served from
+    the root, use '/', otherwise put the URL of the folder containing the
+    web app, e.g. '/stores_l10n/'
 */
 $webroot_folder = '/';
 
