Change default $webroot_folder in base config

--- a/app/config/config.inc.php.ini
+++ b/app/config/config.inc.php.ini
@@ -6,7 +6,7 @@
     the root, use '/', otherwise put the URL of the folder containing the
     web app, e.g. '/stores_l10n/'
 */
-$webroot_folder = '/';
+$webroot_folder = '/stores_l10n/';
 
 // Set up a debug parameter for logging in dev mode to the console
 const DEBUG = false;
