Remove symlink for locales, add to config

--- a/app/config/config.inc.php.ini
+++ b/app/config/config.inc.php.ini
@@ -1,7 +1,12 @@
 <?php
 
 /*
-    This is is used to include assets in templates and parse API requests.
+    Path to a local clone of https://github.com/mozilla-l10n/appstores/
+*/
+$l10n_path = '/path/to/l10n/clone/';
+
+/*
+    This is used to include assets in templates and parse API requests.
     Change this setting according to your system: if the web app is served from
     the root, use '/', otherwise put the URL of the folder containing the
     web app, e.g. '/stores_l10n/'
