--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - composer self-update
   - composer install $flags
   ## Install ESLint
-  - npm install -g eslint
+  ## - npm install -g eslint
 before_script:
   ## Travis configuration
   - cp app/config/config.inc.php.ini app/config/config.inc.php
@@ -25,7 +25,7 @@ script:
   - vendor/atoum/atoum/bin/atoum -d tests/units/ --use-light-report
   - php tests/functional/api.php
   - vendor/bin/php-cs-fixer --diff --dry-run -v fix
-  - eslint web/media/js
+  # - eslint web/media/js
 notifications:
   irc:
     channels:
